--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome To</h1>
-    <h1>Teresa Ahmed world!</h1>
+   <section class="Top-banner">
+    <div class="half-width">
+        <h1>Welcome To</h1>
+    <h1><span class="name">Teresa Ahmed</span> world!</h1>
+    <h3>A junior web developer</h3>
+    <p>I am a computer  engineer.I have completed my Bsc in Cse.My university was 
+        Daffodil international university.It ranked top 7 in our country..My home town is faridpur.I have completed my Ssc and Hsc from here.
+    </p>
+    <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">Hire me</a>
+    </div>
+    <div class="half-width">
+        <img src="images/Teresa png.png" alt="">
+    </div>
+   </section>
 </body>
 </html>
