--- a/index.html
+++ b/index.html
@@ -25,5 +25,16 @@
         <img src="images/Teresa png.png" alt="">
     </div>
    </section>
+   <section class="dream-big">
+<div class="half-width">
+<img src="images/Teresa png.png" alt="">
+</div>
+<div class="half-width">
+<h1>Dream Big</h1>
+<h2>Become a web developer</h2>
+<p>It was not easy.i had tey my best to learn all those things and it helps me for my career</p>
+<a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">Resume</a>
+</div>
+   </section>
 </body>
 </html>
