--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section class="Top-banner">
+   <section class="Top-banner flexable-container">
     <div class="half-width">
         <h1>Welcome To</h1>
     <h1><span class="name">Teresa Ahmed</span> world!</h1>
@@ -25,7 +25,7 @@
         <img src="images/Teresa png.png" alt="">
     </div>
    </section>
-   <section class="dream-big">
+   <section class="dream-big flexable-container">
 <div class="half-width">
 <img src="images/Teresa png.png" alt="">
 </div>
@@ -36,5 +36,25 @@
 <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">Resume</a>
 </div>
    </section>
+   <section class="Experence-area">
+<h1>Experiences</h1>
+<div  class="flexable-container">
+    <div id="Full-stack" class="Exprence-item">
+        <h2>Full stack web developer</h2>
+        <h3 class="name"> 2024-present pro level web developer</h3>
+        <p>I become a web developer after a long journey of my struggle.I set my goal.For being a web developer i used to learn html,css,jss etc</p>
+        </div>
+        <div id="Baby-web"class="Exprence-item">
+        <h2>Baby web developer</h2>
+        <h3 class="name">2022-2024|Hero developer</h3>
+        <p>
+            I become a web developer after a long journey of my struggle.I set my goal.For being a web developer i used to learn html,css,jss etc
+        </p>
+        </div>
+</div>
+   </section>
+   <footer>
+    <p>@Teresa ahmed,a web developer</p>
+   </footer>
 </body>
 </html>
